crates/parser/src/grammar/snapshots/parser__grammar__types_test__ty_parses_diverse_structures-function_with_receiver.snap
---
source: crates/parser/src/grammar/types_test.rs
expression: Receiver.(Foo) -> Result
---
TYPE@0..24
  FUNCTION_TYPE@0..24
    RECEIVER_TYPE@0..8
      TYPE_REFERENCE@0..8
        USER_TYPE@0..8
          SIMPLE_USER_TYPE@0..8
            SIMPLE_IDENTIFIER@0..8
              IDENTIFIER@0..8 "Receiver"
    DOT@8..9 "."
    FUNCTION_TYPE_PARAMETERS@9..14
      L_PAREN@9..10 "("
      TYPE@10..13
        TYPE_REFERENCE@10..13
          USER_TYPE@10..13
            SIMPLE_USER_TYPE@10..13
              SIMPLE_IDENTIFIER@10..13
                IDENTIFIER@10..13 "Foo"
      R_PAREN@13..14 ")"
    WS@14..15 " "
    ARROW@15..17 "->"
    WS@17..18 " "
    TYPE@18..24
      TYPE_REFERENCE@18..24
        USER_TYPE@18..24
          SIMPLE_USER_TYPE@18..24
            SIMPLE_IDENTIFIER@18..24
              IDENTIFIER@18..24 "Result"
