crates/parser/src/grammar/snapshots/parser__grammar__types_test__ty_parses_diverse_structures-qualified_generic.snap
---
source: crates/parser/src/grammar/types_test.rs
expression: Foo.Bar<Baz>
---
TYPE@0..12
  TYPE_REFERENCE@0..12
    USER_TYPE@0..12
      SIMPLE_USER_TYPE@0..3
        SIMPLE_IDENTIFIER@0..3
          IDENTIFIER@0..3 "Foo"
      DOT@3..4 "."
      SIMPLE_USER_TYPE@4..12
        SIMPLE_IDENTIFIER@4..7
          IDENTIFIER@4..7 "Bar"
        TYPE_ARGUMENTS@7..12
          L_ANGLE@7..8 "<"
          TYPE_PROJECTION@8..11
            TYPE@8..11
              TYPE_REFERENCE@8..11
                USER_TYPE@8..11
                  SIMPLE_USER_TYPE@8..11
                    SIMPLE_IDENTIFIER@8..11
                      IDENTIFIER@8..11 "Baz"
          R_ANGLE@11..12 ">"
